fix nav menu layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,9 @@
   }
 }
 
+body {
+  height: 100% !important;
+}
 body, .bg-fade {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
